# BarberX

./: .eleventy.js  .env.template  .eslintrc.cjs  .evident-repo.json  .gitattributes  .gitignore  .licenserc.toml  .lighthouserc.json  .pre-commit-config.yaml  .railwayignore  .renderignore  .stylelintrc.cjs  .stylelintrc.json  404.html  90-DAY-EXECUTION-SUMMARY.md  ADMIN-LOGIN-WORKING.md  AGENTS-V2-ENHANCEMENTS.md  AI-TOOLS-INTERFACE-SUMMARY.md  ALGORITHMS.md  ALL-TESTS-PASSING.md  APP-SIGNING-GUIDE.md  APP_STORE_SUBMISSION_CHECKLIST.md  ARCHITECTURE_REFERENCE.md  BUILD-GUIDE.md  BUILD_COMMANDS.md  BUILD_DEPLOYMENT_OPTIMIZATION.md  CHAT_COMPLETION_SUMMARY.md  CHAT_DEPLOYMENT_CHECKLIST.md  CHAT_IMPLEMENTATION.md  CHAT_QUICK_START.md  CNAME  COMPLETE_IMPLEMENTATION.md  CONSOLIDATION_DEPLOYMENT_GUIDE.md  CONTRIBUTING.md  CRITICAL-FIXES-ADMIN-NAV.md  DASHBOARD-GUIDE.md  DEPENDENCIES-SETUP.md  DEPLOYMENT-GUIDE.md  DESIGN_SYSTEM.md  DEVELOPER_QUICK_REFERENCE.md  (+109 more)
.githooks/: pre-push
bwc/backend/: alembic.ini  pyproject.toml  requirements-dev.lock.txt  requirements.lock.txt
bwc/backend/alembic/: env.py
bwc/backend/alembic/versions/: 0001_initial.py  0002_forensic_hardening.py  0003_extended_models.py
bwc/backend/app/: main.py
bwc/backend/app/api/: schemas.py
bwc/backend/app/core/: config.py  database.py
bwc/backend/app/models/: __init__.py  audit_event.py  case.py  chat_message.py  courtlistener_cache.py  evidence_artifact.py  evidence_file.py  issue.py  job.py  project.py
bwc/backend/tests/: conftest.py  test_api.py  test_courtlistener.py  test_forensics.py
(+1180 files in other folders)
